--- a/css/styles.css
+++ b/css/styles.css
@@ -1,8 +1,11 @@
 
 .top-nav{
   height: 150px;
+}
+.top-nav, footer{
   background-color: #2c3e50;
 }
+
 .nav{
   height: 150px;
   background-color: red;
