--- a/css/styles.css
+++ b/css/styles.css
@@ -1,31 +1,27 @@
 
 .top-nav{
   height: 150px;
-}
-.top-nav, footer{
   background-color: #2c3e50;
 }
-
 .nav{
   height: 150px;
-  background-color: red;
+
 }
 .background-box{
   background-color: #1abc9c;
   height: 500px;
 }
+.background-box-2{
+  height: 500px;
+}
+
 .box{
   height: 100px;
-
-  background-color: pink;
+  background-color: orange;
   border: 1px solid black;
 }
-.left{
-  background-color: green;
-}
-.right{
-  background-color: blue;
-}
+
+
 @media screen and (max-width:991px){
   .box-two{
     display: none;
