--- a/css/styles.css
+++ b/css/styles.css
@@ -1,7 +1,10 @@
 
 .top-nav{
   height: 150px;
-  background-color: #2c3e50;
+
+}
+.top-nav, footer{
+    background-color: #2c3e50;
 }
 .nav{
   height: 150px;
@@ -9,10 +12,10 @@
 }
 .background-box{
   background-color: #1abc9c;
-  height: 500px;
+  
 }
 .background-box-2{
-  height: 500px;
+  background-color:#fff;
 }
 
 .box{
