--- a/css/styles.css
+++ b/css/styles.css
@@ -1,18 +1,18 @@
 
 .top-nav{
-  height: 150px;
-
+color: #fff;
+background-color: #2c3e50;
 }
-.top-nav, footer{
+.margin-padding{
+  margin: 0 0;
+}
+footer{
     background-color: #2c3e50;
 }
-.nav{
-  height: 150px;
 
-}
 .background-box{
   background-color: #1abc9c;
-  
+
 }
 .background-box-2{
   background-color:#fff;
