--- a/css/styles.css
+++ b/css/styles.css
@@ -1,14 +1,18 @@
 
 .top-nav{
-color: #fff;
+
 background-color: #2c3e50;
 }
 .margin-padding{
   margin: 0 0;
 }
+.text-w{
+  color: #fff;
+}
 footer{
     background-color: #2c3e50;
 }
+
 
 .background-box{
   background-color: #1abc9c;
@@ -22,9 +26,10 @@ footer{
   max-width: 100%;
 }
 .box{
+  margin: auto;
   height: 200px;
-  width: 200px;
-  background-color: orange;
+  width: 500px;
+  /* background-color: orange; */
   border: 1px solid black;
 }
 
