--- a/css/styles.css
+++ b/css/styles.css
@@ -8,6 +8,11 @@ background-color: #2c3e50;
 }
 .text-w{
   color: #fff;
+  text-transform: uppercase;
+}
+
+.nav li a{
+  text-transform: uppercase;
 }
 footer{
     background-color: #2c3e50;
