--- a/css/styles.css
+++ b/css/styles.css
@@ -4,15 +4,24 @@
 background-color: #2c3e50;
 }
 .margin-padding{
-  margin: 0 0;
+  margin: -10px -20px;
 }
 .text-w{
   color: #fff;
   text-transform: uppercase;
 }
-
+.navbar-default .navbar-nav > li > a{
+  color: #fff;
+}
+.navbar-default .navbar-nav > li > a:focus, .navbar-default .navbar-nav > li > a:hover{
+  color: #1bc1b2;
+  background-color: transparent;
+}
 .nav li a{
   text-transform: uppercase;
+}
+.navbar-nav > li > a{
+  padding: 10px 35px;
 }
 footer{
     background-color: #2c3e50;
