--- a/css/styles.css
+++ b/css/styles.css
@@ -25,14 +25,26 @@ background-color: #2c3e50;
 .navbar-nav > li > a{
   padding: 10px 35px;
 }
+section{
+  padding-top: 100px;
+  padding-bottom: 100px;
+}
+/* mani */
+.hero-img{
+  max-width: 250px;
+  margin-bottom: 20px;
+}
 footer{
     background-color: #2c3e50;
 }
-
+h1{
+  font-size: 26px;
+  text-transform: uppercase;
+}
 
 .background-box{
   background-color: #1abc9c;
-
+  color: #fff;
 }
 .background-box-2{
   background-color:#fff;
