--- a/css/styles.css
+++ b/css/styles.css
@@ -34,6 +34,26 @@ section{
   max-width: 250px;
   margin-bottom: 20px;
 }
+.star-divider{
+  width: 300px;
+  max-width: 100%;
+  margin:30px auto;
+  text-align: center;
+}
+.star-divider::before,
+.star-divider::after{
+  content: '';
+  display: inline-block;
+  width: 30%;
+  height: 4px;
+  border-radius: 2px;
+  background: #fff;
+}
+.star-divider i.fa-star{
+  display:inline-block;
+  width: 20%;
+  font-size: 30px;
+}
 footer{
     background-color: #2c3e50;
 }
