--- a/css/styles.css
+++ b/css/styles.css
@@ -53,11 +53,49 @@ section{
   display:inline-block;
   width: 20%;
   font-size: 30px;
+  vertical-align: middle;
 }
-footer{
-    background-color: #2c3e50;
+.star-divider.star-blue::before,
+.star-divider.star-blue::after{
+  background:#2c3e50;
+}
+.star-divider.star-blue i.fa-star{
+  color:#2c3e50;
+}
+/* portfolio */
+.portfolio-item{
+  position: relative;
+  margin-bottom: 30px;
+  cursor: pointer;
+  border-radius: 10px;
+  overflow: hidden;
+}
+.portfolio-layover{
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background:rgba(26, 188, 156, 0.7);
+  opacity: 0;
+  transition: opacity .4s;
+}
+.portfolio-item:hover .portfolio-layover{
+  opacity: 1;
+}
+.portfolio-layover i{
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  font-size: 70px;
+  transform: translate(-50%, -50%);
 }
 h1{
+  font-size: 26px;
+  text-transform: uppercase;
+}
+.h-c{
+  color:#2c3e50;
   font-size: 26px;
   text-transform: uppercase;
 }
@@ -80,7 +118,9 @@ h1{
   /* background-color: orange; */
   border: 1px solid black;
 }
-
+footer{
+    background-color: #2c3e50;
+}
 
 @media screen and (max-width:991px){
   .box-two{
